Ajout d'un attribut style sur la balise <body>

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Inria+Serif&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/dbc1e24743.js" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body style="background-color: #011f55">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand" href="{{ path('homepage') }}">
                 <img src="../pictures/photo.jpg" alt="Avatar de Baptiste Bidaux" class="avatar">
