--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -12,15 +12,15 @@
             <h1 class="ml-5 type-writer"></h1>
             <hr class="mx-5">
             <div class="container text-center">
-                <blockquote class="blockquote">
-                    <p class="h2">
+                <blockquote class="blockquote goals-content">
+                    <p>
                         Récemment diplômé du titre professionnel de Développeur Web / Web Mobile, je cherche un premier poste me permettant de me perfectionner et d’apprendre de nouvelles technologies.
                     </p>
-                    <p class="h2">
+                    <p>
                         Bien conscient d'être encore un débutant, je continue à me former quotidiennement et dispose d'une envie débordante d’apprendre ! Le monde de la programmation étant tellement 
                         vaste, j'ai fait le choix de me concentrer sur certaines technologies et frameworks (cf listes ci-dessous).
                     </p>
-                    <p class="h2 mb-0">
+                    <p class="mb-0">
                         Curieux, motivé et autonome, je souhaite aujourd'hui intégrer une équipe soudée et reste bien évidemment ouvert à l'apprentissage de tout autre langage ! Ma rigueur, mon 
                         organisation, ma polyvalence ainsi que mon sens du relationnel sont généralement très appréciés.
                     </p>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="container" id="technologies">
-        <div class="row desktop">
+        <div class="row">
             <div class="col-12 col-lg-6 px-0" id="frontend">
                 <div class="flip-card">
                     <div class="flip-card-inner">
@@ -302,14 +302,14 @@
                     <div class="card-header h2">Vous souhaitez me rencontrer ?</div>
                     <div class="row text-center my-4">
                         <div class="col-md-4 mb-3">
-                            <h3>Adresse</h3>
-                            <p class="h5">
+                            <h3><u>Adresse</u></h3>
+                            <p class="h5 contact-method">
                                 646 route des 2 Tilleuls 76480 Roumare
                             </p>
                         </div>
                         <div class="col-md-4 mb-3">
-                            <h3>Téléphone</h3>
-                            <p class="h5">
+                            <h3><u>Téléphone</u></h3>
+                            <p class="h5 contact-method">
                                 <a href="tel:+33617563285" class="number" style="color: black;">
                                     <i class="fas fa-mobile-alt mr-2"></i>
                                     06 17 56 32 85
@@ -317,8 +317,8 @@
                             </p>
                         </div>
                         <div class="col-md-4 mb-3">
-                            <h3>Adresse mail</h3>
-                            <p class="h5">
+                            <h3><u>Adresse mail</u></h3>
+                            <p class="h5 contact-method">
                                 <a href="mailto:baptistelise@orange.fr&subject=Votre CV en ligne" style="color: black;">
                                     <i class="far fa-paper-plane mr-2"></i>
                                     baptistelise@orange.fr
@@ -370,23 +370,23 @@
                             </div>
                         </div>     
                     {{ form_end(form) }}
-                    <div class="card-header h2">Qui est Baptiste ?</div>
+                    <div class="card-header h2">Qui suis-je ?</div>
                     <div class="card" id="who-am-i">
                         <div class="card-body">
-                            <blockquote class="blockquote">
-                                <p class="h3">
+                            <blockquote class="blockquote who-am-i-content">
+                                <p>
                                     <i class="fas fa-quote-left"></i>
                                     Je suis avant tout quelqu'un de curieux ! J'aime apprendre de nouvelles choses et ça tombe bien, dans mon métier, cela arrive tous les jours ! Passionné de 
                                     nouvelles technologies, je m'intéresse à toutes les nouveautés.
                                 </p>
-                                <p class="h3">
+                                <p>
                                     Je suis également un grand amateur de jeux-vidéo ! De la Master-System au PC Gamer, toutes les machines permettant de jouer me sont passées entre les mains !
                                 </p>
-                                <p class="h3">
+                                <p>
                                     Mais les écrans ne sont pas tout ce qui m'intéresse dans la vie ! J'adore également voyager pour rencontrer de nouvelles cultures et profiter de  somptueux panoramas.
                                     J'ai entre autres déjà parcouru le Mexique, le Canada, le Portugal, la Thaïlande, la Croatie, l'Italie... sans oublier de nombreuses régions de notre jolie France !
                                 </p>
-                                <p class="h3">
+                                <p>
                                     Cet intérêt pour le partage et l'apprentissage, je le développe aussi dans le cadre professionnel où j'aime sentir que j'appartiens à une équipe soudée et qui avance
                                     dans la même direction. on apprécie généralement mon sens du relationnel et ma joie de vivre.
                                     <i class="fas fa-quote-right"></i>
