--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,9 +20,9 @@
 
             <h1 class="h1 my-3 font-weight-normal">Connexion</h1>
             <label for="inputEmail">Email</label>
-            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control login-control" required autofocus>
             <label for="inputPassword">Mot de passe</label>
-            <input type="password" name="password" id="inputPassword" class="form-control mb-3" required>
+            <input type="password" name="password" id="inputPassword" class="form-control login-control mb-3" required>
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
