Modifications du JavaScript

--- a/templates/main/monbnb.html.twig
+++ b/templates/main/monbnb.html.twig
@@ -10,7 +10,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p11.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p11.png" alt="Photo de la page d'accueil du site" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Page d'accueil du site
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p12.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p12.png" alt="Photo de la page des annonces" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Liste des annonces
@@ -29,7 +29,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p9.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p9.png" alt="Photo de la vue détaillée d'une annonce" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Vue détaillée d'une annonce
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p10.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p10.png" alt="Photo de la page de réservation d'une annonce" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Page de réservation d'une annonce
@@ -48,7 +48,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p5.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p5.png" alt="Photo de l'écran d'inscription au site" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran d'inscription au site
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p6.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p6.png" alt="Photo de l'écran de connexion au site" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran de connexion
@@ -67,7 +67,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p7.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p7.png" alt="Photo de l'écran de création d'une annonce" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran de création d'une annonce
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p8.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p8.png" alt="Photo de la page d'un profil utilisateur" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Page d'un profil utilisateur
@@ -86,7 +86,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p1.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p1.png" alt="Photo de la page d'accueil de l'administration du site" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Page d'accueil de l'administration du site
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p2.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p2.png" alt="Photo de la liste des annonces depuis la page d'administration" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Liste des annonces depuis la page d'administration
@@ -105,7 +105,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p3.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p3.png" alt="Photo de l'écran de modification d'un commentaire par un administrateur" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran de modification d'un commentaire par un administrateur
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/monbnb/monbnb-p4.png" alt="" class="picture">
+                <img src="pictures/monbnb/monbnb-p4.png" alt="Photo de l'écran de modification d'une réservation par un administrateur" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran de modification d'une réservation par un administrateur
