--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
     <body style="background-color: #011f55">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand" href="{{ path('homepage') }}">
-                <img src="../pictures/photo.jpg" alt="Avatar de Baptiste Bidaux" class="avatar">
+                <img src="../pictures/photo.jpg" alt="Photo de Baptiste Bidaux" class="avatar">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
