--- a/templates/main/cyberpunk.html.twig
+++ b/templates/main/cyberpunk.html.twig
@@ -11,7 +11,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/cyberpunk/cyberpunk-p1.png" alt="" class="picture">
+                <img src="pictures/cyberpunk/cyberpunk-p1.png" alt="Photo du menu d'accueil de la Fan-Page" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Menu d'accueil de la fan-page
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/cyberpunk/cyberpunk-p2.png" alt="" class="picture">
+                <img src="pictures/cyberpunk/cyberpunk-p2.png" alt="Photo de la vue de la section 'Personnages'" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Vue de la section "Personnages"
@@ -30,7 +30,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/cyberpunk/cyberpunk-p3.png" alt="" class="picture">
+                <img src="pictures/cyberpunk/cyberpunk-p3.png" alt="Photo de l'insertion d'une vidéo YouTube présentant le gameplay du jeu" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Insertion d'une vidéo YouTube présentant le Gameplay du jeu
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/cyberpunk/cyberpunk-p4.png" alt="" class="picture">
+                <img src="pictures/cyberpunk/cyberpunk-p4.png" alt="Photo du bandeau de réservation du jeu" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Bandeau de réservation du jeu
