--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -114,7 +114,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-interval="2000">
-                    <img src="pictures/yusit.png" class="d-block w-100">
+                    <img src="pictures/yusit.png" class="d-block w-100" alt="Image de fond pour le projet Yusit">
                     <div class="carousel-caption d-block">
                         <h1>Yusit.fr</h1>
                         <h3>Refonte complète du site web de l'entreprise YuSit</h3>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="pictures/cyberpunk.jpg" class="d-block w-100">
+                    <img src="pictures/cyberpunk.jpg" class="d-block w-100" alt="Image de fond pour le projet Cyberpunk 2077">
                     <div class="carousel-caption d-block">
                         <h1>Cyberpunk 2077</h1>
                         <h3>Création d'une fan-page !</h3>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="pictures/symreact.png" class="d-block w-100">
+                    <img src="pictures/symreact.png" class="d-block w-100" alt="Image de fond pour le projet Symfony - React">
                     <div class="carousel-caption d-block" style="color: black">
                         <h1>SymReact</h1>
                         <h3>Création d'une API de gestion de factures en React</h3>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="pictures/monbnb.png" class="d-block w-100">
+                    <img src="pictures/monbnb.png" class="d-block w-100" alt="Image de fond pour le projet Mon BnB">
                     <div class="carousel-caption d-block" style="background-color: royalblue">
                         <h1>Mon BnB</h1>
                         <h3>Création d'un site de BnB en Symfony 4</h3>
@@ -179,9 +179,9 @@
                         Maquettage, Modèle Conceptuel des Données (MCD), diagramme des cas d’utilisations,
                         diagrammes de séquence, création de la Base De Données (BDD), création du site :
                         <br>
-                        <strong>Frontend :</strong> HTML 5, CSS 3, JavaScript (+ jQuery)
+                        <strong>Frontend :</strong> HTML 5, CSS 3, JavaScript (+ jQuery), Bootstrap.
                         <br>
-                        <strong>Backend :</strong> Symfony (Framework PHP), MySQL, Méthode
+                        <strong>Backend :</strong> Symfony (Framework PHP), MySQL, Méthode Ajax.
                     </p>
                 </div>
             </div>
@@ -199,8 +199,9 @@
                 <div class="card-body">
                     <h2 class="card-title">Responsable Adjoint - Micromania (Tourville-La-Rivière & Barentin)</h2>
                     <p class="card-text h5">
-                        Vente de jeux, de consoles et de produits associés (extensions de garantie, réservations, abonnements), gestion de la caisse, tenue du magasin, gestion des livraisons, gestion des inventaires, 
-                        gestion et encadrement des équipes, réalisation des plannings, gestion des invendus et des produits défectueux, marketing, tâches administratives, suivi des objectifs, gestion du SAV.
+                        Vente de jeux, de consoles et de produits associés (extensions de garantie, réservations, abonnements), gestion de la caisse, tenue du magasin, gestion des livraisons, gestion des 
+                        inventaires, gestion et encadrement des équipes, réalisation des plannings, gestion des invendus et des produits défectueux, marketing, tâches administratives, suivi des objectifs, 
+                        gestion du SAV.
                     </p>
                 </div>
             </div>
@@ -280,7 +281,7 @@
                         <p class="lead display-4">Développeur Web / Web Mobile</p>
                     </div>
                     <div class="col-lg-2">
-                        <img src="pictures/photo.png" alt="" id="interactive-photo" class="img-fluid mx-auto d-block rounded" style="max-height: 30vh;">
+                        <img src="pictures/photo.jpg" alt="Photo de Baptiste Bidaux" id="interactive-photo" class="img-fluid mx-auto d-block rounded" style="max-height: 30vh;">
                     </div>
                 </div>
 
