--- a/templates/main/symreact.html.twig
+++ b/templates/main/symreact.html.twig
@@ -11,7 +11,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/symreact/symreact-p1.png" alt="" class="picture">
+                <img src="pictures/symreact/symreact-p1.png" alt="Photo de l'écran de connexion à l'application" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran de connexion à l'application
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/symreact/symreact-p2.png" alt="" class="picture">
+                <img src="pictures/symreact/symreact-p2.png" alt="Photo de l'écran d'inscription avec rendu des erreurs de saisie" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran d'inscription avec rendu des erreurs de saisie
@@ -30,7 +30,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/symreact/symreact-p3.png" alt="" class="picture">
+                <img src="pictures/symreact/symreact-p3.png" alt="Photo de la liste des clients" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Liste des clients
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/symreact/symreact-p4.png" alt="" class="picture">
+                <img src="pictures/symreact/symreact-p4.png" alt="Photo de la liste des factures et de leurs états (Payée, Envoyée, Annulée) avec pagination" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Liste des factures et de leurs états avec pagination
@@ -49,7 +49,7 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/symreact/symreact-p5.png" alt="" class="picture">
+                <img src="pictures/symreact/symreact-p5.png" alt="Photo de l'écran de modification d'une facture" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran de modification d'une facture
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/symreact/symreact-p7.png" alt="" class="picture">
+                <img src="pictures/symreact/symreact-p7.png" alt="Photo de l'écran de création d'un client" class="picture">
                 <div class="overlay">
                     <div class="text">
                         Écran de création d'un client
@@ -68,7 +68,8 @@
 
         <div class="row mb-3">
             <div class="pictures-container col-12 col-xl-6">
-                <img src="pictures/symreact/symreact-p6.png" alt="" class="picture">
+                <img src="pictures/symreact/symreact-p6.png" alt="Photo d'un loader qui s'affiche en attendant la réponse de la fonction asynchrone qui permet de récupérer la liste des clients et/ou des factures"
+                class="picture">
                 <div class="overlay">
                     <div class="text">
                         Affichage d'un loader en attendant la réponse de la fonction asynchrone
