Modifications du JavaScript

--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -178,6 +178,12 @@ html, body {
     -webkit-transform: rotateY(180deg);
     -ms-transform: rotateY(180deg);
 }
+
+.front-is-visible {
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+}
   
 .flip-card-front, .flip-card-back {
     position: absolute;
