Modifications du texte d'accueil et du CV a telecharger

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -13,18 +13,20 @@
             <hr class="mx-5">
             <div class="container text-center">
                 <blockquote class="blockquote goals-content">
-                    <p>
-                        Récemment diplômé du titre professionnel de Développeur Web / Web Mobile, je cherche un premier poste me permettant de me perfectionner et d’apprendre de nouvelles technologies.
+                    <p class="mb-5">
+                        Récemment diplômé du titre professionnel de Développeur Web / Web Mobile, je cherche aujourd'hui un premier poste me permettant de faire preuve de mes compétences mais aussi
+                        d'étudier de nouvelles technologies.
                     </p>
-                    <p>
-                        Bien conscient d'être encore un débutant, je continue à me former quotidiennement et dispose d'une envie débordante d’apprendre ! Le monde de la programmation étant tellement 
-                        vaste, j'ai fait le choix de me concentrer sur certaines technologies et frameworks (cf listes ci-dessous).
+                    <p class="mb-5">
+                        Lucide sur le fait d'être encore un débutant, je continue à me former quotidiennement et dispose d'une envie débordante d’apprendre ! Conscient de l'évolution rapide des 
+                        technologies dans ce domaine, je me tiens informé des dernières évolutions et suis dorénavant capable de m'adapter à un nouveau langage, tout en veillant au respect des normes 
+                        w3c et css.
                     </p>
                     <p class="mb-0">
-                        Curieux, motivé et autonome, je souhaite aujourd'hui intégrer une équipe soudée et reste bien évidemment ouvert à l'apprentissage de tout autre langage ! Ma rigueur, mon 
-                        organisation, ma polyvalence ainsi que mon sens du relationnel sont généralement très appréciés.
+                        Curieux, motivé et autonome, je souhaite désormais intégrer une équipe soudée à qui je pourrais apporter mon aide et mon soutien ! Ma rigueur, mon 
+                        organisation ainsi que mon sens du relationnel sont généralement très appréciés et me permettent d'intégrer aisément une équipe.
                     </p>
-                    <footer class="blockquote-footer" style="font-size: 1.625rem;">Un développeur web motivé</footer>
+                    <footer class="blockquote-footer">Un développeur web motivé</footer>
                 </blockquote>
             </div>
             <i class="fas fa-quote-right fa-3x float-right"></i>
